# mkdocs-panzoom

./: .codespellrc  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  BUTTON_FIX_SUMMARY.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  Readme.md  debug_problem.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  test_always_hint_bug.py  test_fix_verification.py  test_positioning_fix.py  todo.md
.github/workflows/: ci.yml  mkdocs-pages.yml  publish-to-pypi.yml
D2/D2imported/: index.html
D2/assets/: diagram.d2
D2/d2diagram/: index.html
Mermaid/bigmermaid/: index.html
Mermaid/clickables/: index.html
Mermaid/excluded/: index.html
Mermaid/links/: index.html
Usage/: index.html
assets/javascripts/: zoompan.js
assets/stylesheets/: panzoom.css
docs/: Usage.md  index.md
docs/D2/: D2imported.md  d2diagram.md
docs/Mermaid/: bigmermaid.md  clickables.md  excluded.md  links.md
docs/images/: largeimage.md
hooks/: performance_debug.py
images/largeimage/: index.html
licences/: enumerate-headings-plugin
local/: readme.md  test.html
local/mkdocs-test-gh-pages/: 404.html  index.html
local/mkdocs-test-gh-pages/Mermaid/bigmermaid/: index.html
local/mkdocs-test-gh-pages/assets/javascripts/: zoompan.js
local/mkdocs-test-gh-pages/assets/stylesheets/: panzoom.css
local/mkdocs-test-gh-pages/search/: search_index.json
mkdocs_panzoom_plugin/: __init__.py  exclude.py  html_page.py  markdown_extension.py  panzoom_box.py  plugin.py  templates.html
mkdocs_panzoom_plugin/custom/: panzoom.css  zoompan.js
scripts/: contributor_setup.sh
search/: search_index.json
tests/: __init__.py  test_exclude.py  test_hint_button_bug.py  test_hint_button_fix.py  test_html_page.py  test_panzoom_box.py  test_plugin.py
